picturas-chart/templates/dev/localstripe/localstripe-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: localstripe
spec:
  type: ClusterIP
  ports:
    - port: 8420
      targetPort: 8420
  selector:
    name: localstripe
